crates/test-files/fixtures/compile_errors/mislabeled_call_args_external_contract_call.fe

contract Foo:
  val: u8

  pub fn baz(val1: u256, val2: u256):
    pass

contract Bar:
  pub fn test():
    Foo(address(0)).baz(doesnt_exist=1, me_neither=4)